[package]
name = "snmp_rust_agent"
authors = ["Julian Satchell"]
version = "0.1.0"
edition = "2021"
publish = false
description = "A framework for building SNMP v3 Agents"
keywords = ["snmp", "agent", "snmp-v3"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jsatchell/snmp_rust_agent"
readme = "README.md"

[dependencies]
rasn-snmp = "0.24.0"
rasn-smi = "0.24.0"
rasn = "0.24.0"
log = "0.4.26"
env_logger = "0.11.6"
sha1 = "0.10.6"
hex = "0.4.3"
regex = "1.11.1"
cfb-mode = "0.8.1"
aes = "0.8.4"
num-traits= "0.2"