[package]
name = "snmp_rust_agent"
authors = ["Julian Satchell"]
version = "0.2.0"
edition = "2021"
publish = true
default-run = "snmp_rust_agent"
description = "A framework for building SNMP v3 Agents"
keywords = ["snmp", "agent", "snmp-v3"]
categories = ["network-programming", "development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jsatchell/snmp_rust_agent"
readme = "README.md"

[dependencies]
rasn-snmp = "0.27.2"
rasn-smi = "0.27.2"
rasn = "0.27.2"
log = "0.4.26"
env_logger = "0.11.6"
# sha2 = "0.10.9"
sha1 = "0.10.6"
hex = "0.4.3"
regex = "1.11.1"
cfb-mode = "0.8.1"
aes = "0.8.4"
num-traits = "0.2"
nom = "8.0.0"
argh = "0.1.13"
rand = "0.9.2"